# energy_harvest_trust

./: .gitignore  Makefile  Pipfile  README.md  UsefulLinks.md  daily_fire_data.py  fire_ground_data_Shared_25Aug_2021.csv  planetData_series.md  punjab_september_2020.xlsx  pyproject.toml  pyvenv.cfg  requirements.txt
.github/ISSUE_TEMPLATE/: infrastructure-setup.md  investigation-request.md
apps/: batch_retrieve_images.py  gdrive_download.py  retrieve_category.py  retrieve_images.py  txt2geojson.py
data/: clean_output.py  clean_output_cotton.py  sources.json
data/input/: polygon0-jan.json  polygon1-jan.json  polygon2-jan.json  polygon3-jan.json  polygon5-jan.json
data/planetData/: .10.png.icloud  .11.png.icloud  .17.png.icloud  .18.png.icloud  .19.png.icloud  .20.png.icloud  .6.png.icloud  .fireOct2020.png.icloud
docs/: RiceCropRecognition.md  UsefulLinks.md
fireDetection/: fireAnalysis.py
modeling/: exploration.py  explorationNonFields.py  preprocess.py  threshold.py
notebooks/: EE_FirmsByState.ipynb  FIRMS_tabular.ipynb  FIRMSvsReal.ipynb  firm_fire_analysis.ipynb  sentinel_data.ipynb
openapi/: eonet-v3.yaml
satelliteAnalysis/: palondian.md  planetData_series.md  realFire.md
src/: algorithm_border_noise.py  extract_gadm_data.py  image_helper.py  logger_factory.py  preprocess_sentinel1.py
src/apps/: batch_retrieve_images.py  gdrive_download.py  retrieve_category.py  retrieve_images.py  txt2geojson.py
src/lib/: preprocess_sentinel1.py  speckle_filter.py
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
swagger_client/api/: categories_api.py  default_api.py
swagger_client/models/: __init__.py  category.py  category_response.py  (+7 more)
(+96 files in other folders)
