[tool.poetry]
name = "energy_harvest_trust"
version = "0.1.0"
description = "Exploration of NASA Wildfire Data for farms in India"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
pandas = "^1.3.2"
certifi = "^2021.5.30"
six = "^1.16.0"
python-dateutil = "^2.8.2"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
